<resources>
    <string name="app_name">MemoryPower</string>
    <string name="start">Start</string>
    <string name="how_much_numbers">How much numbers?</string>
    <string name="next">Next</string>
    <string name="end">End</string>
    <string name="done">Done</string>
    <string name="save_score">Save score?</string>
    <string name="no">NO</string>
    <string name="ok">YES</string>
    <string name="how_much_words">How much words?</string>
    <string name="settings">Settings</string>
    <string name="cardimage">CardImage</string>
    <string name="slash">/</string>
    <string name="how_much_names">How much Names?</string>
    <string name="how_much_cards">How much Cards?</string>
    <string name="ranking_database_error">Failed to access online database,  make sure you have internet connection!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="save_ass">Save ass :</string>
    <string name="write_your_name_here">Write your name here</string>
    <string name="statistics">Statistics</string>
    <string name="always_save_to_leaderboard">Always save to leaderboard</string>
    <string name="clear_user_statistics">Clear user statistics</string>
    <string name="sessions">Sessions</string>
    <string name="session_timer">Session timer</string>
    <string name="how_much_time_allowed">How much time allowed?</string>
    <string name="don_t_post_my_scores">Don\'t post my scores!</string>
    <string name="rate_app">Rate app</string>
    <string name="get_premium">Get premium!</string>

</resources>
