<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/timer_session"
        android:title=""
        android:showAsAction="always"
        android:actionViewClass="android.widget.TextView"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/get_premium"
        android:title="@string/get_premium"
        android:showAsAction="never"
        android:orderInCategory="9"/>

    <item android:id="@+id/rate_app"
        android:title="@string/rate_app"
        android:showAsAction="never"
        android:orderInCategory="10"/>



    <item android:id="@+id/setting"
        android:title="@string/settings"
        android:showAsAction="never"
        android:orderInCategory="100"/>
</menu>