<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rj.pl.memorypower.Session"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sessionRecyclerTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    </android.support.v7.widget.RecyclerView>

    <TextSwitcher
        android:id="@+id/session_text_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right" />

    <ProgressBar
        android:id="@+id/session_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/sessionButton_TextSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/my_button_bg"
        android:minWidth="183dp"
        android:padding="5dp"
        android:text="@string/next" />

    <Button
        android:id="@+id/endSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/my_button_bg"
        android:padding="10dp"
        android:text="@string/end" />

    <Button
        android:id="@+id/endSessionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/my_button_bg"
        android:minWidth="100dp"
        android:padding="10dp"
        android:text="@string/done" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/sessionRecyclerBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>