<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/words_session_relativeMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rj.pl.memorypower.WordsSession">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <!--<rj.pl.memorypower.ExpandableHeightGridView-->
            <GridView
                android:id="@+id/gridViewWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:gravity="center"
                android:horizontalSpacing="4dp"
                android:isScrollContainer="false"
                android:listSelector="@drawable/my_gridlist_selector"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />


            <TextSwitcher
                android:id="@+id/text_switcher_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gridViewWords"
                android:layout_marginTop="20dp"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right" />

            <ProgressBar
                android:id="@+id/progressBar_words_session"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_switcher_words" />


            <Button
                android:id="@+id/sessionButton_TextSwitcher_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBar_words_session"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/my_button_bg"
                android:minWidth="183dp"
                android:padding="5dp"
                android:text="@string/next" />

            <Button
                android:id="@+id/endSessionWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sessionButton_TextSwitcher_words"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/my_button_bg"
                android:padding="10dp"
                android:text="@string/end" />

            <Button
                android:id="@+id/endSessionInputWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/endSessionWords"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="200dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/my_button_bg"
                android:minWidth="100dp"
                android:padding="10dp"
                android:text="@string/done" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>